# software-application

./: CMakeLists.txt  README.md  main.c
configuration/: CMakeLists.txt  configuration.c  configuration.h
configuration/tests/: CMakeLists.txt  test_configuration.cpp
repeat_hello_world/tests/: CMakeLists.txt
shell/: CMakeLists.txt  shell.c  shell.h
shell/commands/: CMakeLists.txt  commands.c  commands.h
shell/commands/build_info/: CMakeLists.txt  build_info.c  build_info.h  build_info_template.c.in
shell/commands/build_info/tests/: CMakeLists.txt  test_build_info.cpp
shell/commands/command/: CMakeLists.txt  command.c  command.h
shell/commands/command/tests/: CMakeLists.txt  test_command.cpp
shell/commands/get/: CMakeLists.txt  get.c  get.h
shell/commands/get/tests/: CMakeLists.txt  test_get.cpp
shell/commands/root/: CMakeLists.txt  root.c  root.h
shell/commands/root/tests/: CMakeLists.txt  test_root.cpp
shell/commands/set/: CMakeLists.txt  set.c  set.h
shell/commands/set/tests/: CMakeLists.txt  test_set.cpp
shell/commands/solve/: CMakeLists.txt  solve.c  solve.h
shell/commands/solve/tests/: CMakeLists.txt  test_solve.cpp
shell/commands/test_device/: CMakeLists.txt  test_device.c  test_device.h
shell/commands/test_device/tests/: CMakeLists.txt  test_test_device.cpp
shell/commands/tests/: CMakeLists.txt  test_commands.cpp
shell/core/: CMakeLists.txt  core.c  core.h
shell/core/tests/: CMakeLists.txt  test_core.cpp
shell/tests/: CMakeLists.txt  test_shell.cpp
startup/: CMakeLists.txt  startup.c  startup.h
startup/tests/: CMakeLists.txt  test_startup.cpp
